--- a/ins-001/api/requirements.txt
+++ b/ins-001/api/requirements.txt
@@ -7,20 +7,22 @@ uvicorn[standard]==0.27.0
 python-multipart==0.0.6
 
 # Supabase
-supabase==2.3.4
-postgrest==0.16.1
+# Upgraded to newer version compatible with httpx 0.26+
+supabase>=2.3.4
+# Let supabase manage its own dependencies
 
 # OpenAI
-openai==1.12.0
+# Upgraded to newer version compatible with httpx 0.26+
+openai>=1.12.0
 
 # Anthropic
 anthropic==0.42.0
 
 # HTTP client (for backup job)
-httpx==0.26.0
+# Newer supabase versions support httpx 0.26+
+httpx>=0.26,<0.29
 
-# Async support
-asyncio==3.4.3
+# Note: asyncio is built into Python 3.4+, no need to install
 
 # Math/vectors
 numpy==1.26.3
@@ -42,5 +44,6 @@ sentry-sdk[fastapi]==1.40.0
 wordfreq==3.0.2
 
 # Dev
-pytest==8.0.0
+# Note: pytest-asyncio 0.23.4 requires pytest<8
+pytest>=7.0.0,<8.0.0
 pytest-asyncio==0.23.4
