--- a/ins-001/web/package.json
+++ b/ins-001/web/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.4.2",
+    "@astrojs/vercel": "^8.0.0",
     "@supabase/supabase-js": "^2.45.4",
     "astro": "^5.1.0",
     "react": "^19.2.3",
