--- a/ins-001/web/vercel.json
+++ b/ins-001/web/vercel.json
@@ -1,19 +1,3 @@
 {
-  "buildCommand": "npm run build",
-  "framework": "astro",
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "X-Content-Type-Options",
-          "value": "nosniff"
-        },
-        {
-          "key": "X-Frame-Options",
-          "value": "DENY"
-        }
-      ]
-    }
-  ]
+  "framework": "astro"
 }
