--- a/ins-001/api/requirements.txt
+++ b/ins-001/api/requirements.txt
@@ -42,6 +42,7 @@ sentry-sdk[fastapi]==1.40.0
 
 # Vocabulary loading
 wordfreq==3.0.2
+nltk==3.8.1  # For WordNet lemmas in curated vocabulary
 
 # Dev
 # Note: pytest-asyncio 0.23.4 requires pytest<8
