--- a/ins-001/api/requirements.txt
+++ b/ins-001/api/requirements.txt
@@ -18,6 +18,9 @@ openai>=1.12.0
 # Anthropic
 anthropic==0.42.0
 
+# Email (Resend)
+resend==2.0.0
+
 # HTTP client (for backup job)
 # Newer supabase versions support httpx 0.26+
 httpx>=0.26,<0.29
